--- a/minecraft_data_analysis.ipynb
+++ b/minecraft_data_analysis.ipynb
@@ -1,6 +1,150 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ca4d4376-369c-415f-8c2f-c86a336402f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.3     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n"
+     ]
+    }
+   ],
+   "source": [
+    "library(tidyverse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0de9c0f5-ca01-41f2-a22b-af589414a751",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mRows: \u001b[22m\u001b[34m196\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m7\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (4): experience, hashedEmail, name, gender\n",
+      "\u001b[32mdbl\u001b[39m (2): played_hours, Age\n",
+      "\u001b[33mlgl\u001b[39m (1): subscribe\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n",
+      "\u001b[1mRows: \u001b[22m\u001b[34m1535\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m5\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (3): hashedEmail, start_time, end_time\n",
+      "\u001b[32mdbl\u001b[39m (2): original_start_time, original_end_time\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    }
+   ],
+   "source": [
+    "players<- read_csv(\"players.csv\")\n",
+    "\n",
+    "sessions<- read_csv(\"sessions.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc578206-87e5-4d69-a0fd-ec57cd86e31a",
+   "metadata": {},
+   "source": [
+    "The dataset contains **196 observations**, with each representing an individual who participated in an study involving an online Minecraft server. There is a total of **7 variables**.\n",
+    "\n",
+    "### List of Variables\n",
+    "\n",
+    "| Variable        | Description |\n",
+    "|----------------|-------------|\n",
+    "| `experience`    | Self-reported skill level in Minecraft. It is either: Beginner, Amateur, Regular, Pro, or Veteran. |\n",
+    "| `subscribe`     | Whether the given participant subscribed to a gaming-related newsletter. Either: Yes or No. |\n",
+    "| `hashedEmail`   | An encrypted version of a participants email (hashed). Each email is unique. |\n",
+    "| `played_hours`  | The total number of hours of Minecraft played during data collection. |\n",
+    "| `name`          | The participant’s name. |\n",
+    "| `gender`        | The participant’s gender. |\n",
+    "| `Age`           | The participant’s age in years. |\n",
+    "\n",
+    "| Variable              | Description |\n",
+    "|-----------------------|-------------|\n",
+    "| `hashedEmail`         | An encrypted version of a participants email (hashed). Each email is unique. |\n",
+    "| `start_time`          | The session start time, formatted as `dd/mm/yyyy hh:mm`. |\n",
+    "| `end_time`            | The session end time, formatted as `dd/mm/yyyy hh:mm`. |\n",
+    "| `original_start_time` | The raw numeric timestamp representing the start time (POSIX style format). |\n",
+    "| `original_end_time`   | The raw numeric timestamp representing the end time. |\n",
+    "\n",
+    "### Data Collection Process\n",
+    "\n",
+    "The data was collected from a free public Minecraft server operated from researchers at the University of British Columbia. The goal of this data collection was to gather behavioral and demographic information of players to better support the development of an AI capable of playing Minecraft.\n",
+    "\n",
+    "### Data Quality\n",
+    "\n",
+    "Overall, the dataset is high quality and full of insightful information. However, there are some issues with the naming of variables:\n",
+    "- Some variables use `snake_case` (e.g., `played_hours`), others use `camelCase` (e.g., `hashedEmail`), and some are inconsistently capitalized (e.g., `Age`).\n",
+    "- Overall, these issues are minor and do not actually affect the usability of the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc1ed9c3-a616-4f4c-aaef-ddeb0b8b040d",
+   "metadata": {},
+   "source": [
+    "\"Which Has a Greater Effect on a Player Subscribing to a Game Newsletter: Hours Played or Total Experience?\"\n",
+    "\n",
+    "\n",
+    "**Predicting Whether A Player Is Likely To Be Subscribed**\n",
+    "\n",
+    "In today’s digital gaming world, understanding how users behave is key to boosting engagement and keeping players around. Many gaming platforms use subscription-based models to make money, so knowing what motivates a user to subscribe can guide effective strategies. In this project, we look at how a player’s experience level and their activity during sessions can affect their chances of subscribing. By carefully processing data, visualizing it, and using predictive modeling with k-Nearest Neighbors (KNN), we aim to find important behavior patterns and create a model to predict subscription status.\n",
+    "\n",
+    "### Question\n",
+    "\n",
+    "Can a player’s experience level and session activity predict whether they are a subscriber or not?\n",
+    "\n",
+    "We examine this by modeling the relationship between the **response variable**:\n",
+    "\n",
+    "- `subscribe` (Yes/No)\n",
+    "\n",
+    "and the **explanatory variables**:\n",
+    "\n",
+    "- `experience` (categorical)\n",
+    "- `total_session_time_hrs` (numeric)\n",
+    "- `average_session_time_hrs` (numeric)\n",
+    "- `num_of_sessions` (numeric) "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.3.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
