Completed Cleaning the Data

--- a/minecraft_data_analysis.ipynb
+++ b/minecraft_data_analysis.ipynb
@@ -106,16 +106,9 @@
    "id": "dc1ed9c3-a616-4f4c-aaef-ddeb0b8b040d",
    "metadata": {},
    "source": [
-    "\"Which Has a Greater Effect on a Player Subscribing to a Game Newsletter: Hours Played or Total Experience?\"\n",
-    "\n",
-    "\n",
-    "**Predicting Whether A Player Is Likely To Be Subscribed**\n",
-    "\n",
-    "In today’s digital gaming world, understanding how users behave is key to boosting engagement and keeping players around. Many gaming platforms use subscription-based models to make money, so knowing what motivates a user to subscribe can guide effective strategies. In this project, we look at how a player’s experience level and their activity during sessions can affect their chances of subscribing. By carefully processing data, visualizing it, and using predictive modeling with k-Nearest Neighbors (KNN), we aim to find important behavior patterns and create a model to predict subscription status.\n",
-    "\n",
     "### Question\n",
     "\n",
-    "Can a player’s experience level and session activity predict whether they are a subscriber or not?\n",
+    "**Which Has a Greater Effect on a Player Subscribing to a Game Newsletter: Hours Played or Total Experience?**\n",
     "\n",
     "We examine this by modeling the relationship between the **response variable**:\n",
     "\n",
@@ -127,6 +120,37 @@
     "- `total_session_time_hrs` (numeric)\n",
     "- `average_session_time_hrs` (numeric)\n",
     "- `num_of_sessions` (numeric) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18baac51-acf0-4efb-8537-c2774e6c36de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Cleaning and Merging the Data\n",
+    "\n",
+    "First, we process the `sessions` dataset to calculate session-level summaries for each player:\n",
+    "\n",
+    "- We convert `start_time` and `end_time` to date-time objects using `dmy_hm()`.\n",
+    "- We compute the session duration in hours by taking the difference between `end_dt` and `start_dt`, then dividing by 60.\n",
+    "- We group the data by `hashedEmail` to summarize sessions for each player.\n",
+    "- For each player, we calculate:\n",
+    "  - `total_session_time_hrs`: the total time played across all sessions.\n",
+    "  - `average_session_time_hrs`: the mean duration of a session.\n",
+    "  - `num_of_sessions`: the total number of sessions.\n",
+    "- We remove any rows where both `total_session_time_hrs` and `average_session_time_hrs` are missing.\n",
+    "- We select only the relevant summary columns for further analysis.\n",
+    "\n",
+    "Next, we join the cleaned session summaries with the original `players` dataset using the `hashedEmail` key. This gives us a single dataset, `clean_players`, that contains both demographic and behavioral data.\n",
+    "\n",
+    "Then, we do the following:\n",
+    "\n",
+    "- Select only the columns we care about: `experience`, `subscribe`, `Age`, `total_session_time_hrs`, `average_session_time_hrs`, and `num_of_sessions`.\n",
+    "- Convert `experience` into an ordered factor so that the levels reflect increasing proficiency: Beginner < Amateur < Regular < Pro < Veteran.\n",
+    "\n",
+    "This prepares the data for analysis and modeling by ensuring all variables are in a consistent, usable format."
    ]
   }
  ],
