Added Methods and Planning

--- a/minecraft_data_analysis.ipynb
+++ b/minecraft_data_analysis.ipynb
@@ -1730,12 +1730,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36003890-f062-42e4-97ea-dda89b2ad39f",
+   "cell_type": "markdown",
+   "id": "adede50a-7ecf-4000-bb81-1a8aeb6ddf46",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Proposed Method for Modeling Newsletter Subscription\n",
+    "\n",
+    "To address our research question of predicting whether a player will subscribe to a game newsletter based on experience level and age, we propose using a k-Nearest Neighbors (kNN) classification model.\n",
+    "\n",
+    "**Why this method is appropriate:**\n",
+    "\n",
+    "* kNN is a simple, non-parametric classification method that can capture relationships between predictors and a categorical outcome.\n",
+    "* It is suitable for our problem because the outcome variable, `subscribe`, is binary (Yes/No), and we want to explore patterns based on experience and age.\n",
+    "\n",
+    "**Assumptions required:**\n",
+    "\n",
+    "* kNN assumes that similar observations in the predictor space have similar outcomes (i.e., players with similar age and experience are more likely to have the same subscription status).\n",
+    "* The predictors should be scaled similarly, as kNN is distance-based and sensitive to differences in units or ranges.\n",
+    "\n",
+    "**Potential limitations or weaknesses:**\n",
+    "\n",
+    "* kNN can be affected by irrelevant or highly correlated features.\n",
+    "* The choice of k (number of neighbors) can strongly affect performance, requiring tuning.\n",
+    "\n",
+    "**Data processing and model selection plan:**\n",
+    "\n",
+    "* Split the dataset into training (75%) and testing (25%) subsets to allow for unbiased evaluation of the model.\n",
+    "* Apply 5-fold cross-validation on the training set to tune the number of neighbors, checking values from 1 to 10.\n",
+    "* Evaluate the final model on the testing set to estimate accuracy.\n",
+    "* The training/testing split ensures we can validate model performance, while cross-validation helps optimize hyperparameters without using the testing data.\n",
+    "\n",
+    "This approach provides a clear, interpretable method to explore how player experience and age influence the likelihood of subscribing, while accounting for potential model tuning and validation considerations."
+   ]
   },
   {
    "cell_type": "code",
